chore: add docs screenshots, tests, and run pytest in CI

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -32,3 +32,17 @@ jobs:
           python-version: '3.10'
       - name: Check python syntax
         run: python -m py_compile grepper.py
+
+  tests:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Install test deps
+        run: python -m pip install --upgrade pip && pip install pytest
+      - name: Run tests
+        run: pytest -q
