--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -43,6 +43,8 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install test deps
-        run: python -m pip install --upgrade pip && pip install pytest
+        run: python -m pip install --upgrade pip && python -m pip install pytest
+      - name: Install project
+        run: python -m pip install -e .
       - name: Run tests
-        run: pytest -q
+        run: python -m pytest -q
