--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Build distributions
         run: python -m build --sdist --wheel
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.6.0
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+          packages-dir: dist/
